# GEO-Scanner

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railpack.toml  railway.toml  render.yaml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/api/mentions/: route.ts
app/api/mentions/[id]/: route.ts
app/api/stats/: route.ts
app/mentions/: page.tsx
app/mentions/[id]/: page.tsx
components/: kpi-card.tsx  mention-card.tsx  sentiment-badge.tsx  sidebar.tsx
components/charts/: domain-bar.tsx  features-bar.tsx  sentiment-pie.tsx  sentiment-trend.tsx
geo_scanner/: __init__.py  analyzer.py  cli.py  config.py  crawler.py  discovery.py  models.py  pipeline.py  reports.py  storage.py  web.py
geo_scanner/static/: index.html
lib/: db.ts  types.ts  utils.ts
tests/: test_config.py  test_crawler.py  test_discovery.py  test_models.py  test_storage.py
